# EasyQuery

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  plan.md  pyproject.toml
backend/: Dockerfile  requirements.txt  test_db_fix.py
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/api/v1/db/: __init__.py  database.py
backend/app/api/v1/endpoints/: __init__.py  connection.py  query.py
backend/app/core/: config.py
backend/app/llm/: base.py  engine.py
backend/app/llm/providers/: anthropic.py  gemini.py  groq.py  openai.py
backend/app/models/: pydantic_models.py
backend/app/services/: query_service.py
backend/app/utils/: clean_code.py
docs/: architecture.md  plan.md  prd.md
frontend/: Dockerfile  index.html  nginx.conf  script.js  style.css
