[project]
name = "easyquery"
version = "0.1.0"
description = "EasyQuery is a groundbreaking tool designed to bridge the gap between human language and relational databases."
authors = [
    { name = "Shanjidul Islam Sadhin", email = "66504343+sadhiin@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.48.0",
]
