[project]
name = "easyquery"
version = "0.1.0"
description = "EasyQuery is a groundbreaking tool designed to bridge the gap between human language and relational databases."
authors = [
    { name = "Shanjidul Islam Sadhin", email = "66504343+sadhiin@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.30",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "streamlit>=1.48.0",
]
